fix: fix problems and use the native dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-.dark-mode {
-  @apply text-white;
+.dark {
+  @apply text-white bg-gray-900;
 }
 
 /* width */
